Actions
Bug #13829
closedgenunix: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Debug build error with gcc 10:
../../common/os/strsubr.c: In function 'propagate_syncq': ../../common/os/strsubr.c:7147:11: error: cast between incompatible function types from 'qi_putp_t' {aka 'int (*)(struct queue *, struct msgb *)'} to 'void (*)()' [-Werror=cast-function-type] 7147 | func = (void (*)())nqp->q_qinfo->qi_putp; | ^ cc1: all warnings being treated as errors *** Error code 1 dmake: Warning: Command failed for target `debug64/strsubr.o' Current working directory /code/illumos-gate/usr/src/uts/intel/genunix
For fix, cast over uintptr_t. Build fixed with it.
Updated by Electric Monk about 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 2576a450861a4a608f6bfabf01759987ff4ad97e
commit 2576a450861a4a608f6bfabf01759987ff4ad97e Author: Toomas Soome <tsoome@me.com> Date: 2021-05-25T14:57:18.000Z 13829 genunix: cast between incompatible function types Reviewed by: Andy Fiddaman <andy@omnios.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions